fix for spacing between content and tags on first blog post

--- a/web/less/frontend/modules/blog.less
+++ b/web/less/frontend/modules/blog.less
@@ -399,7 +399,7 @@ textarea.wpfaqask
 
   .p-1 .entry-footer
   {
-    margin-left:317px
+    float:right
   }
 }
 
